# NuPropa

./: .gitignore  CMakeLists.txt  Channels.cc  Channels.h  NeutrinoAntineutrinoInteraction.cc  NeutrinoAntineutrinoInteraction.h  NeutrinoNeutrinoInteraction.cc  NeutrinoNeutrinoInteraction.h  README.md
PartonicCalculation/notes/: Calculation.tex  NeutrinoScattering.bib
PartonicCalculation/notes/data/: SigmaIncl_Ecms_channel1_virt_s3.txt  Test_NLOEW.py  dsigdcosth_channel1_s3.txt  dsigdcosth_channel1_virt_s3.txt
PartonicCalculation/sigmaNu/: Makefile
PartonicCalculation/sigmaNu/Ecms_scan/: Read_data.py
PartonicCalculation/sigmaNu/Ecms_scan/Ecms_scan_500/: SigmaIncl_Ecms_channel101_s1.txt  SigmaIncl_Ecms_channel102_s1.txt  SigmaIncl_Ecms_channel103_s1.txt  SigmaIncl_Ecms_channel104_s1.txt  SigmaIncl_Ecms_channel105_s1.txt  SigmaIncl_Ecms_channel106_s1.txt  SigmaIncl_Ecms_channel107_s1.txt  SigmaIncl_Ecms_channel108_s1.txt  SigmaIncl_Ecms_channel109_s1.txt  SigmaIncl_Ecms_channel10_s1.txt  SigmaIncl_Ecms_channel110_s1.txt  SigmaIncl_Ecms_channel111_s1.txt  SigmaIncl_Ecms_channel112_s1.txt  SigmaIncl_Ecms_channel113_s1.txt  SigmaIncl_Ecms_channel114_s1.txt  SigmaIncl_Ecms_channel115_s1.txt  SigmaIncl_Ecms_channel116_s1.txt  SigmaIncl_Ecms_channel117_s1.txt  SigmaIncl_Ecms_channel118_s1.txt  SigmaIncl_Ecms_channel119_s1.txt  SigmaIncl_Ecms_channel11_s1.txt  SigmaIncl_Ecms_channel120_s1.txt  SigmaIncl_Ecms_channel121_s1.txt  SigmaIncl_Ecms_channel12_s1.txt  SigmaIncl_Ecms_channel13_s1.txt  SigmaIncl_Ecms_channel14_s1.txt  SigmaIncl_Ecms_channel15_s1.txt  SigmaIncl_Ecms_channel16_s1.txt  SigmaIncl_Ecms_channel17_s1.txt  SigmaIncl_Ecms_channel18_s1.txt  SigmaIncl_Ecms_channel19_s1.txt  SigmaIncl_Ecms_channel1_s1.txt  SigmaIncl_Ecms_channel20_s1.txt  SigmaIncl_Ecms_channel21_s1.txt  SigmaIncl_Ecms_channel22_s1.txt  SigmaIncl_Ecms_channel23_s1.txt  SigmaIncl_Ecms_channel24_s1.txt  SigmaIncl_Ecms_channel25_s1.txt  SigmaIncl_Ecms_channel26_s1.txt  SigmaIncl_Ecms_channel27_s1.txt  (+14 more)
PartonicCalculation/sigmaNu/Ecms_scan/Extended_Scan/: SigmaIncl_Ecms_channel1_s3.txt  SigmaIncl_Ecms_channel2_s3.txt  SigmaIncl_Ecms_channel6_s3.txt  SigmaIncl_Ecms_channel9_s3.txt
PartonicCalculation/sigmaNu/inc/: ME2_Analytic.hh  dsigma.hh
PartonicCalculation/sigmaNu/src/: ME2_Analytic.cc  cuts.cc  dsigma.cc  integration.cc  test_dsigma.cc  tools.cc  var.cc  wrapper_dsigma.cc
PartonicCalculation/sigmaNu_interface/: Makefile
PartonicCalculation/sigmaNu_interface/dataDifferentialXS/channel1/: dsigdcosth_channel1_Ecms1.00179e-05_s1.txt  dsigdcosth_channel1_Ecms1.00410e-08_s1.txt  dsigdcosth_channel1_Ecms1.00743e+03_s1.txt  dsigdcosth_channel1_Ecms1.00975e+00_s1.txt  dsigdcosth_channel1_Ecms1.01207e-03_s1.txt  dsigdcosth_channel1_Ecms1.01440e-06_s1.txt  dsigdcosth_channel1_Ecms1.01674e-09_s1.txt  dsigdcosth_channel1_Ecms1.02011e+02_s1.txt  dsigdcosth_channel1_Ecms1.02246e-01_s1.txt  dsigdcosth_channel1_Ecms1.02481e-04_s1.txt  dsigdcosth_channel1_Ecms1.02717e-07_s1.txt  dsigdcosth_channel1_Ecms1.02954e-10_s1.txt  dsigdcosth_channel1_Ecms1.03058e+04_s1.txt  dsigdcosth_channel1_Ecms1.03296e+01_s1.txt  dsigdcosth_channel1_Ecms1.03533e-02_s1.txt  dsigdcosth_channel1_Ecms1.03771e-05_s1.txt  dsigdcosth_channel1_Ecms1.04010e-08_s1.txt  dsigdcosth_channel1_Ecms1.04356e+03_s1.txt  dsigdcosth_channel1_Ecms1.04596e+00_s1.txt  dsigdcosth_channel1_Ecms1.04837e-03_s1.txt  (+980 more)
PartonicCalculation/sigmaNu_interface/inc/: ME2_Analytic.hh  tools.hh  var.hh
PartonicCalculation/sigmaNu_interface/src/: ME2_Analytic.cc  Main_Interface.cc  dsigma.cc  test_dsigma.cc  tools.cc  var.cc  wrapper_dsigma.cc
include/: NuNuInteraction.h
include/NeutrinoNeutrinoInteraction/: Channels.h
include/nupropa/: Channels.h  ChannelsBundle.h  NeutrinoAntineutrinoInteraction.h  NeutrinoBackground.h  NeutrinoField.h  NeutrinoMixing.h  NeutrinoNeutrinoInteraction.h  NeutrinoOscillation.h  NeutrinoPhotonInteraction.h  ParticleData.h  RelativisticInteraction.h
python/: findCRPropa.py  nupropa.i
src/: Channels.cc  ChannelsBundle.cc  NeutrinoAntineutrinoInteraction.cc  NeutrinoBackground.cc  NeutrinoField.cc  NeutrinoMixing.cc  NeutrinoNeutrinoInteraction.cc  NeutrinoOscillation.cc  NeutrinoPhotonInteraction.cc  ParticleData.cc  RelativisticInteraction.cc
(+7059 files in other folders)
